--- a/multiplechapters.html
+++ b/multiplechapters.html
@@ -1,4 +1,4 @@
-<section class="chapter">
+<section data-type="chapter">
   <h1 id="link2HCH0001">This is one chapter</h1>
   <p>
     Alice was beginning to get very tired of sitting by her sister on the
@@ -11,7 +11,7 @@
     So she set to work, and very soon finished off the cake.
   </p>
 </section>
-<section class="chapter">
+<section data-type="chapter">
   <h1 id="link2HCH0001">This is another chapter</h1>
   <p>
     Alice was beginning to get very tired of sitting by her sister on the
